[gd_scene load_steps=3 format=2]

[ext_resource path="res://menu/PlayerSelectionBox.gd" type="Script" id=1]
[ext_resource path="res://menu/assets/Rectangle 17308select.png" type="Texture" id=2]

[node name="PlayerSelectionBox" type="Control"]
script = ExtResource( 1 )

[node name="SelectRect" type="Sprite" parent="."]
visible = false
texture = ExtResource( 2 )

[node name="NameLabel" type="Label" parent="."]
visible = false
margin_left = -145.0
margin_top = -83.0
margin_right = 148.0
margin_bottom = -66.0
text = "Player X"
align = 1
valign = 2

[node name="JoinButton" type="Button" parent="."]
margin_left = 125.0
margin_top = -73.0
margin_right = 245.0
margin_bottom = 7.0
rect_min_size = Vector2( 120, 80 )
rect_scale = Vector2( 0.5, 0.5 )
text = "X"

[node name="joinLabel" type="Label" parent="JoinButton"]
margin_left = -14.0
margin_top = 122.0
margin_right = 159.0
margin_bottom = 153.0
rect_scale = Vector2( 0.8, 0.8 )
text = "join!
"
align = 1

[connection signal="pressed" from="JoinButton" to="." method="toggle_playing"]
